--- a/WAD.9951.DAL/WAD.9951.DAL.csproj
+++ b/WAD.9951.DAL/WAD.9951.DAL.csproj
@@ -7,6 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Interfaces\xe3ch4w5.33b~" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="13.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
@@ -22,7 +26,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Dtos\" />
 	  <Folder Include="Mapping\" />
 	</ItemGroup>
 
